tests/invalid/Template_Invalid_26.whiley
method equals<a>(&a a) -> bool:
    return a == a
